# TrafficMonitor_Codex_Plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-release.yml
src/: CodexUsageCore.cpp  CodexUsageCore.h  CodexUsageFetcher.cpp  CodexUsageFetcher.h  CodexUsagePlugin.cpp  CodexUsageVersion.h.in
tests/: CodexUsageCoreTests.cpp
